# ModularSCHC

./: .gitignore  CMakeLists.txt  README.md  README.me
CompressionSCHC/: README.md  ruletest.txt
CompressionSCHC/Test/: CMakeLists.txt  Test1_CargarReglas.cpp  Test2_Parsear_IPV6UDP.cpp  Test_CargarReglas.cpp  main.cpp
CompressionSCHC/Test/includes/: SCHC_MACROS.hpp  SCHC_RuleID.hpp  SCHC_RulesTest.hpp
CompressionSCHC/Test/src/: SCHC_RuleID.cpp  SCHC_RulesTest.cpp  main.cpp
FragmentationSCHC/: CMakeLists.txt
FragmentationSCHC/SCHC_Gateway/: CMakeLists.txt
FragmentationSCHC/SCHC_Node/: CMakeLists.txt
FragmentationSCHC/SCHC_Node/include/: SCHC_Node_Ack_on_error.hpp  SCHC_Node_Fragmenter.hpp  SCHC_Node_LoRaWAN_RAK4631.hpp  SCHC_Node_Macros.hpp  SCHC_Node_Message.hpp  SCHC_Node_Session.hpp  SCHC_Node_Stack_L2.hpp  SCHC_Node_State_Machine.hpp
FragmentationSCHC/SCHC_Node/src/: SCHC_Node_Ack_on_error.cpp  SCHC_Node_Fragmenter.cpp  SCHC_Node_LoRaWAN_RAK4631.cpp  SCHC_Node_Message.cpp  SCHC_Node_Session.cpp
FragmentationSCHC/binaries/schc_gateway/: config_frag.json
FragmentationSCHC/binaries/schc_node/: config_frag.json
FragmentationSCHC/config/: config_frag.json  config_frag_node.json
FragmentationSCHC/include/: BackhaulCore.hpp  ConfigManager.hpp  ConfigStructs.hpp  ISCHCStack.hpp  LogHelper.hpp  Orchestrator.hpp  SCHCAckOnErrorReceiver_END.hpp  SCHCAckOnErrorReceiver_INIT.hpp  SCHCAckOnErrorReceiver_RCV_WINDOW.hpp  SCHCAckOnErrorReceiver_WAIT_END.hpp  SCHCAckOnErrorReceiver_WAIT_X_MISSING_FRAG.hpp  SCHCAckOnErrorSender.hpp  SCHCAckOnErrorSender_END.hpp  SCHCAckOnErrorSender_ERROR.hpp  SCHCCore.hpp  SCHCLoRaWANStack.hpp  SCHCLoRaWAN_NS_MQTT_Stack.hpp  SCHCSession.hpp  SCHCTimer.hpp  Types.hpp
FragmentationSCHC/include/interfaces/: ICore.hpp  ISCHCState.hpp  ISCHCStateMachine.hpp
FragmentationSCHC/include/schcAckOnError/: SCHCAckOnErrorReceiver.hpp  SCHCAckOnErrorReceiver_END.hpp  SCHCAckOnErrorReceiver_ERROR.hpp  SCHCAckOnErrorReceiver_INIT.hpp  SCHCAckOnErrorReceiver_RCV_WINDOW.hpp  SCHCAckOnErrorReceiver_WAIT_END.hpp  SCHCAckOnErrorReceiver_WAIT_X_MISSING_FRAG.hpp  SCHCAckOnErrorSender.hpp  SCHCAckOnErrorSender_END.hpp  SCHCAckOnErrorSender_ERROR.hpp  SCHCAckOnErrorSender_INIT.hpp  SCHCAckOnErrorSender_RESEND_MISSING_FRAG.hpp  SCHCAckOnErrorSender_SEND.hpp  SCHCAckOnErrorSender_WAIT_X_ACK.hpp  SCHCGWMessage.hpp
FragmentationSCHC/include/schcArqFec/: SCHCArqFecReceiver.hpp  SCHCArqFecReceiver_END.hpp  SCHCArqFecReceiver_INIT.hpp  SCHCArqFecReceiver_RCV_WINDOW.hpp  SCHCArqFecReceiver_WAIT_X_ALL_1.hpp  SCHCArqFecReceiver_WAIT_X_MISSING_FRAGS.hpp  SCHCArqFecSender.hpp  SCHCArqFecSender_END.hpp  SCHCArqFecSender_INIT.hpp  SCHCArqFecSender_RESEND_MISSING_FRAGS.hpp  SCHCArqFecSender_SEND.hpp  SCHCArqFecSender_WAIT_X_SESSION_ACK.hpp  SCHCArqFecSender_WAIT_X_S_ACK.hpp
FragmentationSCHC/include/schifra/: schifra_bitio_example01  schifra_bitio_example02  schifra_erasure_channel_example01  schifra_erasure_channel_example02  schifra_interleaving_example01  schifra_interleaving_example02  schifra_interleaving_example03  schifra_reed_solomon_codec_validation  schifra_reed_solomon_example01  schifra_reed_solomon_example02  schifra_reed_solomon_example02.cpp  schifra_reed_solomon_example03  schifra_reed_solomon_example04  schifra_reed_solomon_example05  schifra_reed_solomon_example06  schifra_reed_solomon_example07  schifra_reed_solomon_example08  schifra_reed_solomon_example08.cpp  schifra_reed_solomon_example09  schifra_reed_solomon_file_decoding_example  schifra_reed_solomon_file_encoding_example  schifra_reed_solomon_file_interleaving_example  schifra_reed_solomon_gencodec_example  schifra_reed_solomon_product_code_example  schifra_reed_solomon_speed_evaluation
FragmentationSCHC/include/stacks/: SCHCLoRaWANStack.hpp  SCHCLoRaWAN_NS_MQTT_Stack.hpp  SCHCMyriotaHTTPStack.hpp  SCHCMyriotaStack.hpp
FragmentationSCHC/src/: BackhaulCore.cpp  ConfigManager.cpp  Orchestrator.cpp  SCHCAckOnErrorReceiver.cpp  SCHCAckOnErrorReceiver_END.cpp  SCHCAckOnErrorReceiver_ERROR.cpp  SCHCAckOnErrorReceiver_RCV_WINDOW.cpp  SCHCAckOnErrorReceiver_WAIT_END.cpp  SCHCAckOnErrorSender_RESEND_MISSING_FRAG.cpp  SCHCCore.cpp  SCHCGWMessage.cpp  SCHCLoRaWANStack.cpp  SCHCLoRaWAN_NS_MQTT_Stack.cpp  SCHCSession.cpp  SCHCTimer.cpp
FragmentationSCHC/src/schcAckOnError/: SCHCAckOnErrorReceiver.cpp  SCHCAckOnErrorReceiver_END.cpp  SCHCAckOnErrorReceiver_ERROR.cpp  SCHCAckOnErrorReceiver_INIT.cpp  SCHCAckOnErrorReceiver_RCV_WINDOW.cpp  SCHCAckOnErrorReceiver_WAIT_END.cpp  SCHCAckOnErrorReceiver_WAIT_X_MISSING_FRAG.cpp  SCHCAckOnErrorSender.cpp  SCHCAckOnErrorSender_END.cpp  SCHCAckOnErrorSender_ERROR.cpp  SCHCAckOnErrorSender_INIT.cpp  SCHCAckOnErrorSender_RESEND_MISSING_FRAG.cpp  SCHCAckOnErrorSender_SEND.cpp  SCHCAckOnErrorSender_WAIT_X_ACK.cpp  SCHCGWMessage.cpp  SCHCNodeMessage.cpp
FragmentationSCHC/src/schcArqFec/: SCHCArqFecReceiver.cpp  SCHCArqFecReceiver_END.cpp  SCHCArqFecReceiver_INIT.cpp  SCHCArqFecReceiver_RCV_WINDOW.cpp  SCHCArqFecReceiver_WAIT_X_ALL_1.cpp  SCHCArqFecReceiver_WAIT_X_MISSING_FRAGS.cpp  SCHCArqFecSender.cpp  SCHCArqFecSender_END.cpp  SCHCArqFecSender_INIT.cpp  SCHCArqFecSender_RESEND_MISSING_FRAGS.cpp  SCHCArqFecSender_SEND.cpp  SCHCArqFecSender_WAIT_X_SESSION_ACK.cpp  SCHCArqFecSender_WAIT_X_S_ACK.cpp
FragmentationSCHC/src/stacks/: SCHCLoRaWANStack.cpp  SCHCLoRaWAN_NS_MQTT_Stack.cpp  SCHCMyriotaHTTPStack.cpp  SCHCMyriotaStack.cpp
FragmentationSCHC/testing/: CMakeLists.txt
FragmentationSCHC/testing/fragmentation/: CMakeLists.txt  main.cpp  scapy_tester.py
FragmentationSCHC/testing/test_orchestrator/: CMakeLists.txt  main.cpp  scapy_tester.py
captures/: captura.pcap  icmpv6.pcapng
config/: config_frag.json  config_frag_node.json
include/: BackhaulCore.hpp  ConfigStructs.hpp  ICore.hpp  ISCHCStack.hpp  ISCHCState.hpp  ISCHCStateMachine.hpp  Orchestrator.hpp  SCHCAckOnErrorReceiver.hpp  SCHCAckOnErrorReceiver_ERROR.hpp  SCHCCore.hpp  (+12 more)
testing/test_gw_fragmentation/: CMakeLists.txt  main.cpp
testing/test_orchestrator/: CMakeLists.txt  main.cpp  scapy_tester.py
(+62 files in other folders)
